--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
-web3==6.15.1
-python-dotenv==1.0.0
-schedule==1.2.0
 requests==2.31.0
 cryptography==42.0.5
 colorama==0.4.6
-curses-windows==2.2.0; platform_system=="Windows"
-windows-curses==2.3.1; platform_system=="Windows"
+python-dotenv==1.0.1
+web3==6.15.1
+windows-curses==2.3.2
